set/propagate kAppType window prop for mash

A new CL requires browser windows to have kAppType window property
with AppType::BROWSER, which isn't propagated to ash yet.

Since the value enums are defined in ash/public, this property
registration is done in ash/public/cpp/window_properties.

Also, some part of ash code assumes that this property is set
on the views::Widget of ash -- which is actually the root window
of the browsers. So make it so.

Bug: 878037
Test: manually done
Change-Id: I6da9bf77570c5bcde03df1fe0651103496b55e90
Reviewed-on: https://chromium-review.googlesource.com/1191924
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Commit-Queue: Jun Mukai <mukai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586755}
Former-commit-id: 14dfe4009850cd7f1c0248b0011a9cc7e7afc3bb