ash/public/cpp/mus_property_mirror_ash.cc
@@ -31,7 +31,10 @@ void MusPropertyMirrorAsh::MirrorPropertyFromWidgetWindowToRootWindow(
     aura::Window* window,
     aura::Window* root_window,
     const void* key) {
-  if (key == kBlockedForAssistantSnapshotKey) {
+  if (key == aura::client::kAppType) {
+    root_window->SetProperty(aura::client::kAppType,
+                             window->GetProperty(aura::client::kAppType));
+  } else if (key == kBlockedForAssistantSnapshotKey) {
     root_window->SetProperty(
         kBlockedForAssistantSnapshotKey,
         window->GetProperty(kBlockedForAssistantSnapshotKey));
